--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
     "version": 2,
-    "name": "dig245-final-",
+    "name": "dig245-final",
     "builds": [{
-        "src": "./server.js",
+        "src": "./index.js",
         "use": "@vercel/node"
     }],
     "routes": [{
         "src": "/(.*)",
-        "dest": "/server.js"
+        "dest": "/index.js"
     }]
 }
