--- a/package.json
+++ b/package.json
@@ -1,4 +1,16 @@
 {
+	"name": "dig245-final",
+	"version": "1.0.0",
+	"description": "",
+	"main":  "./index.js",
+	"scripts": {
+		"start": "node s ./index.js",
+		"start-dev": "nodemon --ext '*' --trace-warnings server.js",
+		"start-https": "nodemon server-https.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
     "dependencies": {
         "express": "latest",
         "node-fetch": "2",
